[package]
name = "tundra"
version = "0.1.0"
authors = ["Philip Schleiter <phossc@protonmail.com>", "Simon Rumle Tarnow <simon.r.tarnow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.2"
wgpu = "0.5.2"
specs = "0.16.1"